fixed React Icon + Typo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -137,7 +137,7 @@
                                             class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <a href="https://jeremyelliott1.github.io/react-to-do-list/">
-                                    <img src="res/react-icon.svg" alt="React.js Icon" />
+                                    <img src="res/React-icon.svg" alt="React.js Icon" />
                                 </a>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
             <div class="row">
                 <div>
                     <p class="lead">A recent MSc computer science graduate from Newcastle university on track to receive
-                        a distinction with a keen interest data analytics and web development. Comfortable operating in an
+                        a distinction with a keen interest in data analytics and web development. Comfortable operating in an
                         unfamiliar environment reflected in my move from an economics undergraduate degree to a
                         computer science postgraduate degree.</p>
                 </div>
