Added Crypto Tracking App to portfolio items

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,8 +96,7 @@
                                             class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <a href="/uniRankHome">
-                                    <img class="img-fluid" src="res/graduation.png"
-                                        alt="Graduation Photo" />
+                                    <img class="img-fluid" src="res/graduation.png" alt="Graduation Photo" />
                                 </a>
                             </div>
                         </div>
@@ -114,8 +113,54 @@
                         </ul>
                     </div>
                 </div>
-
                 <!-- Portfolio Item 2-->
+                <div class="portfolio-item-wrapper">
+                    <a href="https://jeremyelliott1.github.io/react-api-crypto-tracker//">
+                        <h2>Crypto Currency Tracking (CoinGecko API)</h2>
+                    </a>
+                    <div class="row justify-content-around">
+                        <div>
+                            <p class="portfolio-item-description">
+                                Tracks popular crypto currencies with an added search bar to facilitate easy navigation
+                                to view
+                                the details of a specific currency. Currency details include, name, price, trading
+                                volumes,
+                                percent change in price, and market capitalization.
+                            </p>
+                            <p class="portfolio-item-description">
+                                The application consumes the CoinGecko API through axios.js a promise-based HTTP client
+                                that
+                                makes requests to external servers from the browser. The application dynamically
+                                re-renders the
+                                listed currencies depending on user input provided in a search bar to find a specific
+                                currency.
+                            </p>
+                        </div>
+                        <div class="col-md-6 col-lg-4 mb-5">
+                            <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+                                <div
+                                    class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                    <div class="portfolio-item-caption-content text-center text-white"><i
+                                            class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <a href="https://jeremyelliott1.github.io/react-api-crypto-tracker/">
+                                    <img src="res/CoinGeckoLogo.png" alt="CoinGecko Icon" />
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <ul class="marginless-row lead">Tech Used
+                            <li class="row-li">JavaScript</li>
+                            <li class="row-li">React.js</li>
+                            <li class="row-li">Axios.js</li>
+                            <li class="row-li">HTML5</li>
+                            <li class="row-li">CSS3</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 3-->
                 <div class="portfolio-item-wrapper">
                     <a href="https://jeremyelliott1.github.io/react-to-do-list/">
                         <h2>React To Do List</h2>
@@ -144,8 +189,8 @@
                     </div>
                     <div>
                         <ul class="marginless-row lead">Tech Used
-                            <li class="row-li">React.js</li>
                             <li class="row-li">JavaScript</li>
+                            <li class="row-li">React.js</li>
                             <li class="row-li">HTML5</li>
                             <li class="row-li">CSS3</li>
                         </ul>
@@ -153,7 +198,10 @@
                 </div>
             </div>
         </div>
+        </div>
+        </div>
     </section>
+
     <!-- About Section-->
     <section class="page-section bg-primary text-white" id="about">
         <div class="container">
@@ -169,7 +217,8 @@
             <div class="row">
                 <div>
                     <p class="lead">A recent MSc computer science graduate from Newcastle university on track to receive
-                        a distinction with a keen interest in data analytics and web development. Comfortable operating in an
+                        a distinction with a keen interest in data analytics and web development. Comfortable operating
+                        in an
                         unfamiliar environment reflected in my move from an economics undergraduate degree to a
                         computer science postgraduate degree.</p>
                 </div>
