--- a/public/css/comparison.css
+++ b/public/css/comparison.css
@@ -69,3 +69,12 @@ svg {
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
   cursor: move;
 }
+
+.centeredImageWrapper {
+  display: grid;
+  justify-items: center;
+}
+
+#weightingComparison_Img{
+  height: 40rem;
+}
