centering all charts with grid

--- a/public/css/defaults.css
+++ b/public/css/defaults.css
@@ -24,3 +24,8 @@
     text-decoration: none;
     color: black;
   }
+
+  .centeredGridContainer {
+    display: grid;
+    justify-items: center;
+  }
