--- a/views/completeUniParallelPlot.ejs
+++ b/views/completeUniParallelPlot.ejs
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <div class="chartWrapper">
+  <div class="centeredGridContainer">
     <svg id="parallelChart" height="780" width="1300"></svg>
   </div>
 
