--- a/views/guardianMetricBarCharts.ejs
+++ b/views/guardianMetricBarCharts.ejs
@@ -20,7 +20,7 @@
     <label for="metricMenu">Select Scoring Metric:</label>
     <select id='metricDropDown' name="metricMenu"></select>
   </div>
-  <div class="chartWrapper">
+  <div class="centeredGridContainer">
     <svg id="chart" height="600" width="1300"></svg>
   </div>
 
