--- a/views/comparison.ejs
+++ b/views/comparison.ejs
@@ -17,8 +17,10 @@
         <label for="universityMenu">Select a University:</label>
         <select id='universityDropDown' name="universityMenu"></select>
     </div>
-    <svg id="parallelChart" height="780" width="1300"></svg>
-    <div class='centeredImageWrapper'>
+    <div class='centeredGridContainer'>
+        <svg id="parallelChart" height="780" width="1300"></svg>
+    </div>
+    <div class='centeredGridContainer'>
         <img id="weightingComparison_Img" img src="res/WeightingComparison.png" alt="UniversityRankingsWeightings">
     </div>
     <div id="guardian" data-xaxis="<%= dataSet1 %>"></div>
