--- a/views/completeUniMetricBarCharts.ejs
+++ b/views/completeUniMetricBarCharts.ejs
@@ -22,7 +22,7 @@
     </select>
   </div>
 
-  <div class="chartWrapper">
+  <div class="centeredGridContainer">
     <svg id="chart" height="600" width="1300"></svg>
   </div>
 
