--- a/views/guardianParallelPlot.ejs
+++ b/views/guardianParallelPlot.ejs
@@ -20,12 +20,11 @@
     </div>
   </div>
 
-  <div class="chartWrapper">
+  <div class="centeredGridContainer">
     <svg id="parallelChart" height="780" width="1300"></svg>
   </div>
 
   <button id="button_BarChart" width="1800"><a href="/guardian/byMetric">View Metrics in Detail</a></button>
-
   <div id="tips_div">
     <h2>Tips:</h2>
     <ul id="tips_list">
@@ -43,8 +42,6 @@
         scores for each metric</li>
     </ul>
   </div>
-
-
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
 </body>
 
